[package]
name = "sqlitefs"
version = "0.1.0"
edition = "2024"
description = "A cross-platform SQLite-based file system for backup & archive"
license = "MIT"
repository = "https://github.com/khanaffan/sqlite-fs"
homepage = "https://github.com/khanaffan/sqlite-fs"
readme = "README.md"
keywords = ["sqlite", "filesystem", "backup", "archive"]
categories = ["filesystem", "database"]

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
zstd = "0.13"
flate2 = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.17"
hex = "0.4"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
